# Solitaer_Loesung

./: .gitignore  CMakeLists.txt  README.md
include/: button.h  buttons.h  global_defines.h  raylib.h  spielfeld.h
raylib_test/: .gitignore
src/: buttons.cpp  main.cpp  spielfeld.cpp
